--- a/styles.css
+++ b/styles.css
@@ -54,3 +54,35 @@ select {
 #otherViolation {
     display: none;
 }
+
+.radio{
+    display: inline-flex;
+    align-items:center;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.radio__input{
+    display:none;
+}
+.radio__radio{
+    width: 1.25em;
+    height: 1.25em;
+    border: 2px solid #000000
+    border-radius: 50%;
+    margin-right: border-box;
+    padding: 2px;
+}
+.radio__radio::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    display: black;
+    background: #000000;
+    border-radius: 50%;
+
+    transform: scale(0);
+    transition: transform 0.15s;
+}
+.radio__input:checked + .radio__radio::after {
+    transform: scale(1);
