--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ select {
 .radio__radio{
     width: 1.25em;
     height: 1.25em;
-    border: 2px solid #000000
+    border: 2px solid #000000;
     border-radius: 50%;
     margin-right: border-box;
     padding: 2px;
