--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,8 @@ select {
     height: 1.25em;
     border: 2px solid #555555;
     border-radius: 50%;
-    margin-right: border-box;
+    margin-right: 10px;
+    box-sizing: border-box;
     padding: 2px;
 }
 .radio__radio::after {
