--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ select {
 .radio__radio{
     width: 1.25em;
     height: 1.25em;
-    border: 2px solid #555555;
+    border: 2px solid #808080;
     border-radius: 50%;
     margin-right: 10px;
     box-sizing: border-box;
@@ -79,7 +79,7 @@ select {
     width: 100%;
     height: 100%;
     display: block;
-    background: #555555;
+    background: #FFFF00;
     border-radius: 50%;
 
     transform: scale(0);
