--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ select {
 .radio__radio{
     width: 1.25em;
     height: 1.25em;
-    border: 2px solid #808080;
+    border: 2px solid #d8e4e2;
     border-radius: 50%;
     margin-right: 10px;
     box-sizing: border-box;
@@ -79,7 +79,7 @@ select {
     width: 100%;
     height: 100%;
     display: block;
-    background: #FFFF00;
+    background: #009879;
     border-radius: 50%;
 
     transform: scale(0);
@@ -87,3 +87,11 @@ select {
 }
 .radio__input:checked + .radio__radio::after {
     transform: scale(1);
+}
+
+
+
+
+
+
+    
